deploy/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compras-publicas-api
  labels:
    app: compras-publicas-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compras-publicas-api
  template:
    metadata:
      labels:
        app: compras-publicas-api
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: compras-publicas-api
          image: ghcr.io/jeysel/compras-publicas-sc/compras-publicas-api:latest
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
