deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: compras-publicas-api
  labels:
    app: compras-publicas-api
spec:
  type: ClusterIP
  selector:
    app: compras-publicas-api
  ports:
    - name: http
      port: 8000
      targetPort: http
